css/stylesheet.css
/*basics styling*/
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}
html {
    width: 100vw;
    background-color: whitesmoke;
}
body {
    width: 100%;
}

.row {
    display: flex;
    justify-content: space-around;
}

/*header & nav*/
header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    width: 100%;
    height: 12vh;
    background-color: #E30614;
}
header h4 {
    font-family: 'Merienda', bold;
    color: white;
    text-align: center;
    margin-top: 0;
    margin-bottom: 5px;
}
nav {
    width: 100%;
    display: flex;
    justify-content: space-around;
    animation: none;
    
}
.navItem {
    padding-right: 5%;
    padding-left: 5%;
    margin-bottom: 0.4em;
}
.navItem a {
    text-decoration: none;
    color: white;
}
.navItem h5 {
    padding: 0.4em 0.4em 0.4em 0.4em;
    font-family: 'Cutive Mono', monospace;
    text-transform: uppercase;
    letter-spacing: 3px;
    transition: background-color 0.5s;
    -webkit-transition: background-color 0.5s;
}
.navItem h5:hover {
    background-color: #005da9;
}
.burger {
    display: none;
    color: white;
    transition: color;
    font-size: 1.5em;
}
@media screen and (max-width: 700px) {
    nav {
        position: absolute;
        left: 0px;
        height: 92vh;
        top: 12vh;
        z-index: 10;
        flex-direction: column;
        align-items: center;
        width: 40%;
        background-color: #E30614;
        transform: translateX(-100%);
        transition: transform 0.5s ease-in;
    }
    .navItem {
        opacity: 0;
    }
    .burger {
        display: block;
        position: absolute;
        top: 4.5vh;
        left: 5%;
        z-index: 11;
        cursor: pointer;
        transition: transform 0.5s ease;
    }
    .nav-active {
        transform: translateX(0%);
    }
}

/*slider*/
.slider-content{
    width: 100%;
    position: relative;
    margin: auto;
}
.slides {
    display: none;
}
.slides img{
    max-height: 40em;
    object-fit: cover;
}
#prevBtn {
    position: absolute;
    top: 50%;
    z-index: 10;
    left: 1%;
    font-size: 2em;
    color: #E30614;
    cursor: pointer;
    transition: color 0.5s;
    -webkit-transition: color 0.5s;
    -moz-transition: color 0.5s;
    -ms-transition: color 0.5s;
}
#nextBtn {
    position: absolute;
    top: 50%;
    z-index: 10;
    left: 98%;
    font-size: 2em;
    color: #E30614;
    cursor: pointer;
    transition: color 0.5s;
    -webkit-transition: color 0.5s;
    -moz-transition: color 0.5s;
    -ms-transition: color 0.5s;
}
#prevBtn:hover, #nextBtn:hover {
    color: #005da9;
}


/*banner*/
.banner {
    display: block;
    width: 100%;
    background-color: dimgray;
}
.bannerImage {
    width: 100%;
    display: block;
}

main {
    display: block;
    width: 100%;
}

/*Page Title*/
.pageTitle {
    text-align: center;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    margin-right: auto;
    margin-left: auto;
}

/*frames*/
.frame {
    width: 30%;
    background-color: #005da9;
    height: auto;
    transition: background-color 2s;
    -webkit-transition: background-color 2s;
}
.frame:hover {
    background-color: #E30614;
    color: #EBEBEB
}
.frame a {
    color: inherit;
    text-decoration: none;
}
.frame a:hover {
    cursor: pointer;
}
.frameTitle {
    height: 20%;
    text-align: center;
}
.frameTitle h3 {
    color: #EBEBEB;
    padding-top: 5%;
    margin-top: 0;
    margin-bottom: 1em;
}
.frameImage {
    display: block;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}
.frameImage img {
    display: block;
    width: 100%;
    height: auto;
    max-height: 300px;
}
.frame p {
    padding-left: 5%;
    padding-right: 5%;
    padding-bottom: 5%;
    text-align: center;
    color: white;
}

@media screen and (max-width: 700px) {
    #frames {
        flex-direction: column;
    }
    .frame {
        width: 80%;
        margin-top: 10px;
        margin-left: auto;
        margin-right: auto;
    }
}

/* collumn1/1 */
.collumn1-1 {
    padding: 5%;
} 

/* collumn1/2 */
.collumn1-2 {
    width: 40%;
}

/* pageitems */
.imageItem {
    background-color: #E30614;
    padding: 0.5%;
}
.imageItem img {
    width: 100%;
    height: auto;
}
.textItem {
    padding: 1%;
    background-color: #005da9;
}
.itemTitle, .collumn1-2 p {
    margin: 1em 0.25em 1em 0.25em;
}

/*verhuur & verkoop*/
.verhuurItem, .verkoopItem {
    align-items: flex-start;
}
@media screen and (max-width: 800px) {
    .verhuurItem, .verkoopItem {
        flex-direction: column;
        align-items: center;
    }
    .verhuurItem .collumn1-2, .verkoopItem .collumn1-2{
        width: 80%;
    }
}

/*lists*/
ul {
    font-family: 'Open Sans', sans-serif;
}

/*footer*/
footer {
    width: 100%;
    height: auto;
    margin-top: 2em;
    background-color: #1B2021;
    color: #B7C9CD;
    display: flex;
    justify-content: space-around;
    align-items: center;

}
.footerColumn {
    flex-basis: 30%;
}
.footerColumn img {
    width: 100%;
    height: auto;
}
.footerColumn ul {
    font-family: 'Cutive Mono', monospace;
    font-size: 1.3em;
    list-style: none;
}

@media screen and (max-width: 800px) {
    footer {
        flex-direction: column;
        align-items: center;
    }
    .footerColumn {
        width: 100%;
        text-align: center;
        padding: 0 0 1em 0;
    }
}

/*Animations*/
.enlarge {
    transition: transform .2s;
}
@media screen and (min-width: 601px){
    .frame:hover {
        transform: scale(1.10);
    }
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
}
@keyframes fade {
    from {opacity: 0 }
    to {opacity: 1 }
}
@-webkit-keyframes fade {
    from {opacity: 0 }
    to {opacity: 1 }
}

/*text */
h3, h5 {
    font-family: 'Roboto', sans-serif;
}
h2, h4, h6, p {
    font-family: 'Open Sans', sans-serif;
}

h1 {
    font-family: 'Fjalla One', sans-serif;
    color: #E30614;
    font-size: 4em;
    font-weight: 700;
    text-decoration: underline #005da9;
    letter-spacing: 2.5px;
}
h2 {
    font-size: 3em;
    font-weight: 600;
}
h3 {
    font-size: 2em;
    font-weight: 600;
    letter-spacing: 2px;
}
h4 {
    font-size: 1.5em;
    font-weight: 600;
}
h5 {
    font-size: 1.25em;
    font-weight: 700;
    letter-spacing: 2px;
}
h6 {
    font-size: 1.25em;
    font-weight: 800;
    letter-spacing: 3px;
}

